==> markuspetermann/STM32_NUCLEO-F401RE_IHM01A1_ChibiOS/drivers/BSP/STM32F4xx-Nucleo/stm32f4xx_nucleo_ihm01a1.c <==
#include <ch.h>
#include <hal.h>
#include "stm32f4xx_nucleo_ihm01a1.h"
#include "controller.h"
#define SPIx_TIMEOUT_MAX                      ((uint32_t)0x1000)

void L6474_Board_Delay(uint32_t delay)
{
    chThdSleepMilliseconds(delay);
}

void L6474_Board_Pwm1SetFreq(uint32_t newFreq)
{
    pwmcnt_t period = PWM_CLK / newFreq;
    pwmEnableChannel(&BSP_MOTOR_CONTROL_BOARD_PWM1_DRV, BSP_MOTOR_CONTROL_BOARD_PWM1_CH, period>>1);
    pwmChangePeriod(&BSP_MOTOR_CONTROL_BOARD_PWM1_DRV, period);
}

void L6474_Board_Pwm2SetFreq(uint32_t newFreq)
{
    pwmcnt_t period = PWM_CLK / newFreq;
    pwmEnableChannel(&BSP_MOTOR_CONTROL_BOARD_PWM2_DRV, BSP_MOTOR_CONTROL_BOARD_PWM2_CH, period>>1);
    pwmChangePeriod(&BSP_MOTOR_CONTROL_BOARD_PWM2_DRV, period);
}

void L6474_Board_Pwm3SetFreq(uint32_t newFreq)
{
    /* double frequency, because we use softPWM need to toggle the pin twice per period */
    newFreq = newFreq*2;
    pwmcnt_t period = PWM_CLK / newFreq;
    pwmEnableChannel(&BSP_MOTOR_CONTROL_BOARD_PWM3_DRV, BSP_MOTOR_CONTROL_BOARD_PWM3_CH, period>>1);
    pwmChangePeriod(&BSP_MOTOR_CONTROL_BOARD_PWM3_DRV, period);
}

void L6474_Board_PwmInit(uint8_t deviceId)
{
    switch (deviceId)
    {
        case 0:
            pwmStart(&BSP_MOTOR_CONTROL_BOARD_PWM1_DRV,&pwm1cfg);
            pwmEnablePeriodicNotification(&BSP_MOTOR_CONTROL_BOARD_PWM1_DRV);
            break;
        case  1:
            pwmStart(&BSP_MOTOR_CONTROL_BOARD_PWM2_DRV,&pwm2cfg);
            pwmEnablePeriodicNotification(&BSP_MOTOR_CONTROL_BOARD_PWM2_DRV);
            break;
        case 2:
            pwmStart(&BSP_MOTOR_CONTROL_BOARD_PWM3_DRV,&pwm3cfg);
            pwmEnablePeriodicNotification(&BSP_MOTOR_CONTROL_BOARD_PWM3_DRV);
            break;
    }
}

void L6474_Board_PwmStop(uint8_t deviceId)
{
    switch (deviceId)
    {
        case 0:
            pwmDisableChannel(&BSP_MOTOR_CONTROL_BOARD_PWM1_DRV,BSP_MOTOR_CONTROL_BOARD_PWM1_CH);
            break;
        case  1:
            pwmDisableChannel(&BSP_MOTOR_CONTROL_BOARD_PWM2_DRV,BSP_MOTOR_CONTROL_BOARD_PWM2_CH);
            break;
        case 2:
            pwmDisableChannel(&BSP_MOTOR_CONTROL_BOARD_PWM3_DRV,BSP_MOTOR_CONTROL_BOARD_PWM3_CH);
            break;
        default:
            break;
    }
}

void L6474_Board_ReleaseReset(uint8_t deviceId)
{
    (void)deviceId;
    palSetPad(BSP_MOTOR_CONTROL_BOARD_RESET_PORT, BSP_MOTOR_CONTROL_BOARD_RESET_PIN);
}

void L6474_Board_Reset(uint8_t deviceId)
{
    (void)deviceId;
    palClearPad(BSP_MOTOR_CONTROL_BOARD_RESET_PORT, BSP_MOTOR_CONTROL_BOARD_RESET_PIN);
}

void L6474_Board_SetDirectionGpio(uint8_t deviceId, uint8_t gpioState)
{
    switch (deviceId)
    {
        case 2:
            palWritePad(BSP_MOTOR_CONTROL_BOARD_DIR_3_PORT, BSP_MOTOR_CONTROL_BOARD_DIR_3_PIN, gpioState);
            break;
        case 1:
            palWritePad(BSP_MOTOR_CONTROL_BOARD_DIR_2_PORT, BSP_MOTOR_CONTROL_BOARD_DIR_2_PIN, gpioState);
            break;
        case 0:
            palWritePad(BSP_MOTOR_CONTROL_BOARD_DIR_1_PORT, BSP_MOTOR_CONTROL_BOARD_DIR_1_PIN, gpioState);
            break;
        default:
        ;
    }
}

uint8_t L6474_Board_SpiInit(void)
{
    spiStart(&SPIDx,&spicfg);
    return 0;
}

uint8_t L6474_Board_SpiWriteBytes(uint8_t *pByteToTransmit, uint8_t *pReceivedByte, uint8_t nbDevices)
{
    spiSelect(&SPIDx);
    spiExchange(&SPIDx, nbDevices, pByteToTransmit, pReceivedByte);
    spiUnselect(&SPIDx);
    return 0;
}
