==> GrandviewIoT/MotorLib_Embedded/Stepper/STM32/stm32f4xx_nucleo_ihm01a1.c <==
#include "stm32f4xx_nucleo_ihm01a1.h"
#define  TIMER_PRESCALER (1024)
#define  SPIx_TIMEOUT_MAX                      ((uint32_t)0x1000)

void  L6474_Board_Delay (uint32_t delay)
{
    HAL_Delay (delay);
}

void  L6474_Board_Pwm1SetFreq (uint16_t newFreq)
{
  uint32_t  sysFreq;
  uint32_t  period;

  sysFreq = HAL_RCC_GetSysClockFreq();

               // Double the frequency as the SW is generated by SW
  period  = (sysFreq / (TIMER_PRESCALER * BSP_MOTOR_CONTROL_BOARD_PWM1_FREQ_RESCALER * (uint32_t) newFreq)) - 1;
 
              // VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV
              // THIS IS WHAT STARTs the PWMs _and_ INTERRUPTs
              // VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV
  __HAL_TIM_SetAutoreload (&hTimPwm1, period);    // set period (step frequency)
  __HAL_TIM_SetCompare (&hTimPwm1, BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM1, period >> 1); // set duty
  HAL_TIM_PWM_Start_IT (&hTimPwm1, BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM1);  // turn on interrupts
}

void  L6474_Board_Pwm2SetFreq (uint16_t newFreq)
{
  uint32_t sysFreq = HAL_RCC_GetSysClockFreq();
  uint32_t period  = (sysFreq/ (TIMER_PRESCALER * BSP_MOTOR_CONTROL_BOARD_PWM2_FREQ_RESCALER  * (uint32_t)newFreq)) - 1;

  __HAL_TIM_SetAutoreload (&hTimPwm2, period);
  __HAL_TIM_SetCompare (&hTimPwm2, BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM2, period >> 1);
  HAL_TIM_PWM_Start_IT (&hTimPwm2, BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM2);
}

void  L6474_Board_Pwm3SetFreq (uint16_t newFreq)
{
  uint32_t sysFreq = HAL_RCC_GetSysClockFreq();
     /* Double the frequency as the SW is generated by SW */
  uint32_t period  = (sysFreq/ (TIMER_PRESCALER * BSP_MOTOR_CONTROL_BOARD_PWM3_FREQ_RESCALER * (uint32_t)newFreq)) - 1;

  __HAL_TIM_SetAutoreload (&hTimPwm3, period);
  __HAL_TIM_SetCompare (&hTimPwm3, BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM3, period >> 1);
  HAL_TIM_PWM_Start_IT (&hTimPwm3, BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM3);
}

void  L6474_Board_PwmInit (uint8_t deviceId)
{
  TIM_OC_InitTypeDef       sConfigOC;
  TIM_MasterConfigTypeDef  sMasterConfig;
  TIM_HandleTypeDef        *pHTim;
  uint32_t                 channel;

  switch (deviceId)
   {
    case 0:      // WVD this appears to be redundant with motor_init_pwms() 
    default:
      pHTim           = &hTimPwm1;
      pHTim->Instance = BSP_MOTOR_CONTROL_BOARD_TIMER_PWM1;
      channel         = BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM1;
      break;

    case  1:
      pHTim           = &hTimPwm2;
      pHTim->Instance = BSP_MOTOR_CONTROL_BOARD_TIMER_PWM2;
      channel         = BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM2;
      break;


    case 2:
      pHTim = &hTimPwm3;
      pHTim->Instance = BSP_MOTOR_CONTROL_BOARD_TIMER_PWM3;
      channel = BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM3;
      break;
   }

  pHTim->Init.Prescaler     = TIMER_PRESCALER -1;
  pHTim->Init.CounterMode   = TIM_COUNTERMODE_UP;
  pHTim->Init.Period        = 0;
  pHTim->Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
  HAL_TIM_PWM_Init (pHTim);

  sConfigOC.OCMode     = TIM_OCMODE_PWM1;
  sConfigOC.Pulse      = 0;
  sConfigOC.OCPolarity = TIM_OCPOLARITY_HIGH;
  sConfigOC.OCFastMode = TIM_OCFAST_DISABLE;
  HAL_TIM_PWM_ConfigChannel (pHTim, &sConfigOC, channel);

  sMasterConfig.MasterOutputTrigger = TIM_TRGO_RESET;
  sMasterConfig.MasterSlaveMode     = TIM_MASTERSLAVEMODE_DISABLE;
  HAL_TIMEx_MasterConfigSynchronization (pHTim, &sMasterConfig);
}

void  L6474_Board_PwmStop (uint8_t deviceId)
{
  switch (deviceId)
  {
    case 0:
      HAL_TIM_PWM_Stop (&hTimPwm1, BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM1);
      break;

    case  1:
      HAL_TIM_PWM_Stop (&hTimPwm2, BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM2);
      break;

    case 2:
       HAL_TIM_PWM_Stop (&hTimPwm3, BSP_MOTOR_CONTROL_BOARD_CHAN_TIMER_PWM3);
      break;

    default:
      break;             // ignore error
  }
}

void  L6474_Board_ReleaseReset (uint8_t deviceId)
{
    HAL_GPIO_WritePin (BSP_MOTOR_CONTROL_BOARD_RESET_PORT, BSP_MOTOR_CONTROL_BOARD_RESET_PIN, GPIO_PIN_SET);
}

void  L6474_Board_Reset (uint8_t deviceId)
{
    HAL_GPIO_WritePin (BSP_MOTOR_CONTROL_BOARD_RESET_PORT, BSP_MOTOR_CONTROL_BOARD_RESET_PIN, GPIO_PIN_RESET);
}

void  L6474_Board_SetDirectionGpio (uint8_t deviceId, uint8_t gpioState)
{
  switch (deviceId)
  {

    case 0:
      HAL_GPIO_WritePin (BSP_MOTOR_CONTROL_BOARD_DIR_1_PORT, BSP_MOTOR_CONTROL_BOARD_DIR_1_PIN,
                         (GPIO_PinState) gpioState);
      break;

    case 1:
      HAL_GPIO_WritePin (BSP_MOTOR_CONTROL_BOARD_DIR_2_PORT, BSP_MOTOR_CONTROL_BOARD_DIR_2_PIN,
                         (GPIO_PinState) gpioState);
      break;

    case 2:
      HAL_GPIO_WritePin (BSP_MOTOR_CONTROL_BOARD_DIR_3_PORT, BSP_MOTOR_CONTROL_BOARD_DIR_3_PIN,
                         (GPIO_PinState) gpioState);
      break;

    default:
      ;                         // ignore, should not occur
  }
}

uint8_t  L6474_Board_SpiInit (void)
{
  HAL_StatusTypeDef status;

     /* Initialises the SPI  -- WVD This is redundant with motor_initi_gpio_ctl_outputs()------------*/
  SpiHandle.Instance               = SPIx;
  SpiHandle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_32;
  SpiHandle.Init.Direction         = SPI_DIRECTION_2LINES;
  SpiHandle.Init.NSS               = SPI_NSS_SOFT;       // CS is SW controlled

  SpiHandle.Init.CLKPhase          = SPI_PHASE_2EDGE;    // SPI Mode 3
  SpiHandle.Init.CLKPolarity       = SPI_POLARITY_HIGH;

  SpiHandle.Init.CRCCalculation    = SPI_CRCCALCULATION_DISABLED;
  SpiHandle.Init.CRCPolynomial     = 7;
  SpiHandle.Init.DataSize          = SPI_DATASIZE_8BIT;
  SpiHandle.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  SpiHandle.Init.TIMode            = SPI_TIMODE_DISABLED;

  SpiHandle.Init.Mode              = SPI_MODE_MASTER;    // we are MASTER

  status = HAL_SPI_Init (&SpiHandle);

  return (uint8_t) status;
}

uint8_t  L6474_Board_SpiWriteBytes (uint8_t *pByteToTransmit,
                                    uint8_t *pReceivedByte, uint8_t nbDevices)
{
  HAL_StatusTypeDef  status;
  uint32_t           i;

// NOTE: This goofy logic does a CS High/Low toggle for every byte sent/rcvd,
//       even for 4-byte cmd+data sequences.  Tilt ? 

  HAL_GPIO_WritePin (BSP_MOTOR_CONTROL_BOARD_CS_PORT, BSP_MOTOR_CONTROL_BOARD_CS_PIN,
                     GPIO_PIN_RESET);            // Assert CS

  for (i = 0; i < nbDevices; i++)
   {
     status = HAL_SPI_TransmitReceive (&SpiHandle, pByteToTransmit,
                                       pReceivedByte, 1, SPIx_TIMEOUT_MAX);
// 08/13/16 - FIXED WITH TEMP HACK TO ALSO call L6474_Board_SpiInit
     if (status != HAL_OK)
       {
         break;
       }
     pByteToTransmit++;
     pReceivedByte++;
   }

  HAL_GPIO_WritePin (BSP_MOTOR_CONTROL_BOARD_CS_PORT, BSP_MOTOR_CONTROL_BOARD_CS_PIN,
                     GPIO_PIN_SET);            // De-Assert CS

  return (uint8_t) status;
}
